Fix button overlap in Sensors panel via margin
R=mathias@chromium.org

Fixed: 1261403
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/3234185
Commit-Queue: Yang Guo <yangguo@chromium.org>

--- a/front_end/panels/sensors/sensors.css
+++ b/front_end/panels/sensors/sensors.css
@@ -293,7 +293,7 @@ fieldset.device-orientation-override-section {
 }
 
 button.text-button {
-  margin: 0 10px;
+  margin: 4px 0 0 10px;
 }
 
 @media (forced-colors: active) {
